flex/07-flex-layout-2/style.css
body {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  margin: 0;
  min-height: 100vh;
  display:flex;
  flex-direction: column;
  justify-content:space-between;
}

.header {
  height: 72px;
  background: darkmagenta;
  color: white;
  font-size:24px;
  font-weight:bold;
  display:flex;
  justify-content:flex-start;
  padding:8px;

}

.footer {
  height: 72px;
  background: #eee;
  color: darkmagenta;
  display: flex;
  flex:0 1 1;
  justify-content:center;
  align-items:center;
  font-weight: bold;

}

.content {
  display:flex;
  flex-direction:row;
  justify-content:center;
  align-items: center;

}


.sidebar {
  width: 300px;
  background: royalblue;
  box-sizing: border-box;
  display: flex;
  flex:1;
}

.c {
  display: flex;
  flex-direction: column;
  flex:1;
  justify-content:space-between;
}

.ctop {
  display: flex;
  flex-direction: row;
  flex:1;
  justify-content:space-evenly;
}

.cbottom {
  display: flex;
  flex-direction: row;
  flex:1;
  justify-content:space-evenly;
}
.card {
  border: 1px solid #eee;
  box-shadow: 2px 4px 16px rgba(0,0,0,.06);
  border-radius: 4px;
}

